<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="discount">Discount</string>
    <string name="submit">Split</string>
    <string name="reset">Reset</string>
    <string name ="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name = "nosvs">No SVS</string>
    <string name="gst">GST</string>
</resources>